maybe i should get my ternary syntax right?

--- a/templates/etc/sudoers.d/user_template.erb
+++ b/templates/etc/sudoers.d/user_template.erb
@@ -3,4 +3,4 @@
 <% if @no_req_tty == true -%>
 Defaults:<%= @username %> !requiretty
 <% end -%>
-<%= @username %> ALL=<%= @as_others == true : '(ALL) ' ? '' %><%= @no_passwd == true : 'NOPASSWD:' ? '' %>ALL
+<%= @username %> ALL=<%= @as_others == true ? '(ALL) ' : '' %><%= @no_passwd == true ? 'NOPASSWD:' : '' %>ALL
