--- a/templates/etc/yum.repos.d/ambari.repo.erb
+++ b/templates/etc/yum.repos.d/ambari.repo.erb
@@ -3,4 +3,4 @@ name=ambari-1.7-20150327_2315
 baseurl=<%= ambari_repo_uri %><%# http://ibm-open-platform.ibm.com/repos/Ambari/RHEL6/x86_64/1.7 %>
 enabled=1
 gpgcheck=1
-gpgkey=/etc/pki/rpm-gpg/RPM-GPG-KEY-IOP<%# http://ibm-open-platform.ibm.com/repos/Ambari/RHEL6/x86_64/1.7/BI-GPG-KEY.public %>
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-IOP<%# http://ibm-open-platform.ibm.com/repos/Ambari/RHEL6/x86_64/1.7/BI-GPG-KEY.public %>
