--- a/templates/var/lib/ambari-server/resources/stacks/BigInsights/4.0/repos/repoinfo.xml.erb
+++ b/templates/var/lib/ambari-server/resources/stacks/BigInsights/4.0/repos/repoinfo.xml.erb
@@ -24,11 +24,15 @@
       <baseurl><%= @iop_repo_uri %><%# http://ibm-open-platform.ibm.com/repos/IOP/RHEL6/x86_64/4.0 %></baseurl>
       <repoid>IOP-4.0</repoid>
       <reponame>IOP</reponame>
+      <gpgcheck><%= @gpg_check == true ? '1' : '0' %></gpgcheck>
+      <sslverify><%= @ssl_verify == true? '1' : '0' %></sslverify>
     </repo>
     <repo>
       <baseurl><%= @iop_utils_repo_uri %><%# http://ibm-open-platform.ibm.com/repos/IOP-UTILS/RHEL6/x86_64/1.0 %></baseurl>
       <repoid>IOP-UTILS-1.0</repoid>
       <reponame>IOP-UTILS</reponame>
+      <gpgcheck><%= @gpg_check == true ? '1' : '0' %></gpgcheck>
+      <sslverify><%= @ssl_verify == true? '1' : '0' %></sslverify>
     </repo>
   </os>
 </reposinfo>
