--- a/templates/etc/ambari-agent/conf/ambari-agent.ini.erb
+++ b/templates/etc/ambari-agent/conf/ambari-agent.ini.erb
@@ -28,10 +28,8 @@ data_cleanup_max_size_MB = 100
 ping_port=8670
 cache_dir=/var/lib/ambari-agent/cache
 tolerate_download_failures=true
-
-[command]
-maxretries=2
-sleepBetweenRetries=1
+run_as_user=root
+parallel_execution=0
 
 [security]
 keysdir=/var/lib/ambari-agent/keys
@@ -44,9 +42,11 @@ pidLookupPath=/var/run/
 [heartbeat]
 state_interval=6
 dirs=/etc/hadoop,/etc/hadoop/conf,/etc/hbase,/etc/hcatalog,/etc/hive,/etc/oozie,
-  /etc/sqoop,/etc/ganglia,/etc/nagios,
+  /etc/sqoop,/etc/ganglia,
   /var/run/hadoop,/var/run/zookeeper,/var/run/hbase,/var/run/templeton,/var/run/oozie,
-  /var/log/hadoop,/var/log/zookeeper,/var/log/hbase,/var/run/templeton,/var/log/hive,
-  /var/log/nagios
+  /var/log/hadoop,/var/log/zookeeper,/var/log/hbase,/var/run/templeton,/var/log/hive
 ; 0 - unlimited
 log_lines_count=300
+
+[logging]
+syslog_enabled=0
