--- a/templates/etc/ambari-server/conf/ambari.properties.erb
+++ b/templates/etc/ambari-server/conf/ambari.properties.erb
@@ -1,4 +1,3 @@
-#
 # Copyright 2011 The Apache Software Foundation
 #
 # Licensed to the Apache Software Foundation (ASF) under one
@@ -17,40 +16,97 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#
-#Thu Jun 11 10:53:55 CDT 2015
-ulimit.open.files=10000
-server.connection.max.idle.millis=900000
-bootstrap.script=/usr/lib/python2.6/site-packages/ambari_server/bootstrap.py
-server.version.file=/var/lib/ambari-server/resources/version
-api.authenticate=true
-server.persistence.type=local
-ambari-server.user=<%= @ambari_user %>
-agent.threadpool.size.max=25
-agent.task.timeout=900
-jdk1.7.url=http://ibm-open-platform.ibm.com/repos/IOP-UTILS/RHEL6/x86_64/1.0/openjdk/jdk-1.7.0.tar.gz
-server.jdbc.user.name=ambari
+security.server.keys_dir = /var/lib/ambari-server/keys
+#security.server.disabled.ciphers=SSL_RSA_WITH_DES_CBC_SHA|SSL_RSA_EXPORT_WITH_RC4_40_MD5|SSL_DHE_RSA_WITH_DES_CBC_SHA|SSL_DHE_DSS_WITH_DES_CBC_SHA|SSL_RSA_EXPORT_WITH_DES40_CBC_SHA|SSL_DHE_RSA_EXPORT_WITH_DES40_CBC_SHA|SSL_DHE_DSS_EXPORT_WITH_DES40_CBC_SHA|SSL_RSA_WITH_3DES_EDE_CBC_SHA|SSL_DHE_RSA_WITH_DES_CBC_SHA
+#security.server.disabled.protocols=SSL|SSLv2|SSLv3
+resources.dir = /var/lib/ambari-server/resources
+shared.resources.dir = /usr/lib/ambari-server/lib/ambari_commons/resources
+custom.action.definitions = /var/lib/ambari-server/resources/custom_action_definitions
+
+java.releases=openjdk1.8,openjdk1.7
 java.home=<%= @java_home %>
-server.jdbc.postgres.schema=ambari
-recommendations.dir=/var/run/ambari-server/stack-recommendations
-server.os_type=redhat6
-webapp.dir=/usr/lib/ambari-server/web
-custom.action.definitions=/var/lib/ambari-server/resources/custom_action_definitions
-resources.dir=/var/lib/ambari-server/resources
-server.execution.scheduler.maxDbConnections=5
-bootstrap.setup_agent.script=/usr/lib/python2.6/site-packages/ambari_server/setupAgent.py
-server.execution.scheduler.misfire.toleration.minutes=480
-security.server.keys_dir=/var/lib/ambari-server/keys
-stackadvisor.script=/var/lib/ambari-server/resources/scripts/stack_advisor.py
-server.tmp.dir=/var/lib/ambari-server/tmp
-server.execution.scheduler.maxThreads=5
+openjdk1.7.desc=OpenJDK 1.7.0 (deprecated)
+openjdk1.7.url=http://birepo-build.svl.ibm.com/repos/IOP-UTILS/RHEL6/x86_64/1.1/openjdk/jdk-1.7.0.tar.gz
+openjdk1.7.dest-file=jdk-1.7.0.tar.gz
+openjdk1.7.home=/usr/jdk64/
+openjdk1.7.re=(java.*)/jre
+openjdk1.8.desc=OpenJDK 1.8.0
+openjdk1.8.url=http://birepo-build.svl.ibm.com/repos/IOP-UTILS/RHEL7/x86_64/1.1/openjdk/jdk-1.8.0.tar.gz
+openjdk1.8.dest-file=jdk-1.8.0.tar.gz
+openjdk1.8.home=/usr/jdk64/
+openjdk1.8.re=(java.*)/jre
+#java.releases=jdk1.7,jdk1.6
+jdk1.6.desc=Oracle JDK 1.6
+jdk1.6.url=http://public-repo-1.hortonworks.com/ARTIFACTS/jdk-6u31-linux-x64.bin
+jdk1.6.dest-file=jdk-6u31-linux-x64.bin
+jdk1.6.jcpol-url=http://public-repo-1.hortonworks.com/ARTIFACTS/jce_policy-6.zip
+jdk1.6.jcpol-file=jce_policy-6.zip
+jdk1.6.home=/usr/jdk64/
+jdk1.6.re=Creating (jdk.*)/jre
+jdk1.7.desc=Oracle JDK 1.7
+jdk1.7.url=http://public-repo-1.hortonworks.com/ARTIFACTS/jdk-7u67-linux-x64.tar.gz
+jdk1.7.dest-file=jdk-7u67-linux-x64.tar.gz
+jdk1.7.jcpol-url=http://public-repo-1.hortonworks.com/ARTIFACTS/UnlimitedJCEPolicyJDK7.zip
+jdk1.7.jcpol-file=UnlimitedJCEPolicyJDK7.zip
+jdk1.7.home=/usr/jdk64/
+jdk1.7.re=(jdk.*)/jre
+jdk1.8.desc=Oracle JDK 1.8 + Java Cryptography Extension (JCE) Policy Files 8
+jdk1.8.url=http://public-repo-1.hortonworks.com/ARTIFACTS/jdk-8u40-linux-x64.tar.gz
+jdk1.8.dest-file=jdk-8u40-linux-x64.tar.gz
+jdk1.8.jcpol-url=http://public-repo-1.hortonworks.com/ARTIFACTS/jce_policy-8.zip
+jdk1.8.jcpol-file=jce_policy-8.zip
+jdk1.8.home=/usr/jdk64/
+jdk1.8.re=(jdk.*)/jre
+
 metadata.path=/var/lib/ambari-server/resources/stacks
-server.fqdn.service.url=http://169.254.169.254/latest/meta-data/public-hostname
-server.http.session.inactive_timeout=1800
-server.stages.parallel=true
+common.services.path=/var/lib/ambari-server/resources/common-services
+server.version.file=/var/lib/ambari-server/resources/version
+webapp.dir=/usr/lib/ambari-server/web
 bootstrap.dir=/var/run/ambari-server/bootstrap
-client.threadpool.size.max=25
-server.jdbc.user.passwd=/etc/ambari-server/conf/password.dat
+bootstrap.script=/usr/lib/python2.6/site-packages/ambari_server/bootstrap.py
+bootstrap.setup_agent.script=/usr/lib/python2.6/site-packages/ambari_server/setupAgent.py
+recommendations.dir=/var/run/ambari-server/stack-recommendations
+stackadvisor.script=/var/lib/ambari-server/resources/scripts/stack_advisor.py
+server.tmp.dir=/var/lib/ambari-server/data/tmp
+ambari.python.wrap=ambari-python-wrap
+ambari-server.user=<%= @ambari_user %>
+
+api.authenticate=true
+server.connection.max.idle.millis=900000
+server.fqdn.service.url=http://169.254.169.254/latest/meta-data/public-hostname
+server.stages.parallel=true
+
+# Views settings
+views.request.connect.timeout.millis=5000
+views.request.read.timeout.millis=10000
+
+# Scheduler settings
 server.execution.scheduler.isClustered=false
-server.jdbc.database=postgres
-server.jdbc.database_name=ambari
+server.execution.scheduler.maxThreads=5
+server.execution.scheduler.maxDbConnections=5
+server.execution.scheduler.misfire.toleration.minutes=480
+
+# Kerberos settings
+kerberos.keytab.cache.dir = /var/lib/ambari-server/data/cache
+
+# Default timeout in seconds before task is killed
+agent.task.timeout=900
+# Default timeout in seconds before package installation task is killed
+agent.package.install.task.timeout=1800
+
+# thread pool maximums
+client.threadpool.size.max=25
+agent.threadpool.size.max=25
+
+# linux open-file limit
+ulimit.open.files=10000
+
+# Server HTTP settings
+server.http.session.inactive_timeout=1800
+
+# to skip service checks during deploy
+skip.service.checks=false
+
+# The oldest stack version to support rolling upgrade
+rollingupgrade.stack=BigInsights
+rollingupgrade.version=4.0.0.0
